template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  Deploys DocFlow application for managing tickets with messages

Parameters:
  UsersPoolName:
    Type: String
    Default: docflow-users
    Description: |
      User group name for users.
  AdminPoolName:
    Type: String
    Default: docflow-admins
    Description: |
      Admin group name for users.
  TemplateBucket:
    Type: String
    Description: |
      Template bucket name.
  TemplateBucketPrefix:
    Type: String
    Description: |
      Prefix for template bucket files.
  VpcCidrBlock:
    Type: String
    Default: 192.168.0.0/22
    Description: |
      VPC CIDR block
  PublicSubnet1CidrBlock:
    Type: String
    Default: 192.168.0.0/24
    Description: First public subnet CIDR block from first availability zone
  PublicSubnet2CidrBlock:
    Type: String
    Default: 192.168.1.0/24
    Description: Second public subnet CIDR block from second availability zone
  PrivateSubnet1CidrBlock:
    Description: First private subnet CIDR block from first availability zone
    Type: String
    Default: 192.168.2.0/24
  PrivateSubnet2CidrBlock:
    Description: Second private subnet CIDR block from second availability zone
    Type: String
    Default: 192.168.3.0/24
  DBName:
    Description: Database Name
    Type: String
    MinLength: '1'
    MaxLength: '64'
    Default: docflow
    AllowedPattern: "^[a-zA-Z]+[0-9a-zA-Z_]*$"
    ConstraintDescription: Must start with a letter. Only numbers, letters, and _ accepted. max length 64 characters

  DBPort:
    Description: TCP/IP Port for the Database Instance
    Type: Number
    Default: 5432
    ConstraintDescription: 'Must be in the range [1115-65535]'
    MinValue: 1115
    MaxValue: 65535

  DBUsername:
    Description: Database master username
    Default: docflow
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: "^[a-zA-Z]+[0-9a-zA-Z_]*$"
    ConstraintDescription: Must start with a letter. Only numbers, letters, and _ accepted. max length 16 characters

  DBEngineVersion:
    Description: Database engine version
    Type: String
    Default: 5.7.mysql_aurora.2.08.0

  DBInstanceSize:
    Default: db.t3.small
    Description: Database instance size.
    Type: String
    AllowedValues:
      - db.t3.small
      - db.t3.medium
      - db.r4.large
      - db.r4.xlarge
      - db.r4.2xlarge
      - db.r4.4xlarge
      - db.r4.8xlarge
      - db.r4.16xlarge
      - db.r5.large
      - db.r5.xlarge
      - db.r5.2xlarge
      - db.r5.4xlarge
      - db.r5.8xlarge
      - db.r5.12xlarge
      - db.r5.16xlarge
      - db.r5.24xlarge

Globals:
  Function:
    Runtime: python3.8
    Timeout: 30
    Handler: index.handler
    VpcConfig:
      SecurityGroupIds:
        - !Ref LambdaSecurityGroup
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
  Api:
    Cors:
      AllowMethods: "'*'"
      AllowHeaders: "'*'"
      AllowOrigin: "'*'"

Resources:
  # S3 documents bucket
  DocumentBucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Metadata:
      Description: >-
        Bucket for storing document files
    Properties:
      AccessControl:
        Private
      PublicAccessBlockConfiguration:
        BlockPublicPolicy: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256

  # RDS
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

  RDSCluster:
    Type: AWS::RDS::DBCluster
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      Engine: aurora-mysql
      EngineVersion: !Ref DBEngineVersion
      DatabaseName: !Ref DBName
      Port: !Ref DBPort
      MasterUsername: !Sub "{{resolve:secretsmanager:${Secret}:SecretString:username}}"
      MasterUserPassword: !Sub "{{resolve:secretsmanager:${Secret}:SecretString:password}}"
      DBSubnetGroupName: !Ref DBSubnetGroup
      VpcSecurityGroupIds: [!Ref DBSecurityGroup]

  Secret:
    Type: AWS::SecretsManager::Secret
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      Description: Secret for the Aurora database
      GenerateSecretString:
        SecretStringTemplate: !Join [ '', [ '{"username": "', !Ref DBUsername, '"}' ] ]
        GenerateStringKey: "password"
        ExcludeCharacters: '"@/\'
        PasswordLength: 32
  SecretClusterAttachment:
    Type: AWS::SecretsManager::SecretTargetAttachment
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      SecretId: !Ref Secret
      TargetId: !Ref RDSCluster
      TargetType: AWS::RDS::DBCluster

  DatabaseInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      Engine: aurora-mysql
      EngineVersion: !Ref DBEngineVersion
      DBClusterIdentifier: !Ref RDSCluster
      DBInstanceClass: !Ref DBInstanceSize
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref DBSubnetGroup

  # Cognito
  UserPool:
    Type: "AWS::Cognito::UserPool"
    Properties:
      UserPoolName: !Ref UsersPoolName
      AutoVerifiedAttributes:
        - email
      Policies:
        PasswordPolicy:
          MinimumLength: 6
          RequireNumbers: true
      Schema:
        - Name: email
          AttributeDataType: String
          Mutable: false
          Required: true
      LambdaConfig:
        PostConfirmation: !GetAtt CreateUserFunction.Arn

  UserPoolClient:
    Type: "AWS::Cognito::UserPoolClient"
    Properties:
      ClientName: !Sub ${UsersPoolName}-client
      GenerateSecret: false
      UserPoolId: !Ref UserPool
      ExplicitAuthFlows:
        - ALLOW_REFRESH_TOKEN_AUTH
        - ALLOW_USER_PASSWORD_AUTH

  AdminPool:
    Type: "AWS::Cognito::UserPool"
    Properties:
      UserPoolName: !Ref AdminPoolName
      AdminCreateUserConfig:
        AllowAdminCreateUserOnly: true
      AutoVerifiedAttributes:
        - email
      Policies:
        PasswordPolicy:
          MinimumLength: 6
          RequireNumbers: true
      Schema:
        - Name: email
          AttributeDataType: String
          Mutable: false
          Required: true
      LambdaConfig:
        PostAuthentication: !GetAtt CreateUserFunction.Arn

  AdminPoolClient:
    Type: "AWS::Cognito::UserPoolClient"
    Properties:
      ClientName: !Sub ${AdminPoolName}-client
      GenerateSecret: false
      UserPoolId: !Ref AdminPool
      ExplicitAuthFlows:
        - ALLOW_REFRESH_TOKEN_AUTH
        - ALLOW_USER_PASSWORD_AUTH

  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PublicSubnet1CidrBlock
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1b

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PublicSubnet2CidrBlock
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1a

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet1CidrBlock
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: false
      AvailabilityZone: us-east-1b

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet2CidrBlock
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: false
      AvailabilityZone: us-east-1a

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda security group
      VpcId: !Ref VPC

  DBIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 5432
      SourceSecurityGroupId: !Ref LambdaSecurityGroup

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS security group
      VpcId: !Ref VPC

  LambdaVPCElasticNetworkExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns: ["arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"]
      Policies:
        - PolicyName: LambdaExecutionPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: lambda:PublishVersion
                Resource: '*'
              - Effect: Allow
                Action: secretsmanager:GetSecretValue
                Resource: !Ref Secret
              - Effect: Allow
                Action:
                  - "*"
                Resource: !GetAtt DocumentBucket.Arn
              - Effect: Allow
                Action:
                  - "*"
                Resource: !Sub "${DocumentBucket.Arn}/*"

  LambdaToCognitoVPCElasticNetworkExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns: ["arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"]
      Policies:
        - PolicyName: LambdaExecutionPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: cognito-idp:ListUsers
                Resource: !GetAtt AdminPool.Arn

  SharedLayer:
    Type: AWS::Serverless::LayerVersion
    Properties:
      CompatibleRuntimes:
        - python3.8
      ContentUri: ./shared
      Description: Layer for shared code

  CreateUserFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/CreateUser
      Description: Allows for creating new user after successful registration
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action: secretsmanager:GetSecretValue
              Resource: !Ref Secret
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
      Role: !GetAtt LambdaVPCElasticNetworkExecutionRole.Arn

  LambdaUserInvocationPermission:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !GetAtt CreateUserFunction.Arn
      Principal: cognito-idp.amazonaws.com
      SourceArn: !GetAtt UserPool.Arn
  LambdaAdminInvocationPermission:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !GetAtt CreateUserFunction.Arn
      Principal: cognito-idp.amazonaws.com
      SourceArn: !GetAtt AdminPool.Arn

  # Admin API
  AdminAPI:
    Type: AWS::Serverless::Api
    Properties:
      StageName: prod
      Auth:
        InvokeRole: CALLER_CREDENTIALS
        AddDefaultAuthorizerToCorsPreflight: false
        ApiKeyRequired: false
        DefaultAuthorizer: Docflow-AdminAccess
        Authorizers:
          Docflow-AdminAccess:
            UserPoolArn: !GetAtt AdminPool.Arn

  GetUsersFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/GetUsers
      Description: Returns all user emails
      Events:
        CreateDocument:
          Type: Api
          Properties:
            RestApiId: !Ref AdminAPI
            Path: /users
            Method: get
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action: secretsmanager:GetSecretValue
              Resource: !Ref Secret
            - Effect: Allow
              Action: cognito-idp:ListUsers
              Resource: !GetAtt AdminPool.Arn
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
          ADMIN_POOL_ID: !Ref AdminPool
      Role: !GetAtt LambdaToCognitoVPCElasticNetworkExecutionRole.Arn

  CreateTicketTemplateFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/CreateTicketTemplate
      Description: Allows for creating new ticket templates
      Events:
        CreateDocument:
          Type: Api
          Properties:
            RestApiId: !Ref AdminAPI
            Path: /ticketTemplates
            Method: post
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action: secretsmanager:GetSecretValue
              Resource: !Ref Secret
            - Effect: Allow
              Action:
                - "s3:ListBucket"
              Resource: !GetAtt DocumentBucket.Arn
            - Effect: Allow
              Action:
                - "s3:GetObject"
                - "s3:PutObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
          BUCKET_NAME: !Ref DocumentBucket
      Role: !GetAtt LambdaVPCElasticNetworkExecutionRole.Arn

  GetTicketTemplatesFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/GetTicketTemplates
      Description: Returns all ticket templates
      Events:
        GetDocument:
          Type: Api
          Properties:
            RestApiId: !Ref PublicAPI
            Path: /ticketTemplates
            Method: get
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action: secretsmanager:GetSecretValue
              Resource: !Ref Secret
            - Effect: Allow
              Action:
                - "s3:ListBucket"
              Resource: !GetAtt DocumentBucket.Arn
            - Effect: Allow
              Action:
                - "s3:GetObject"
                - "s3:PutObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
          BUCKET_NAME: !Ref DocumentBucket
      Role: !GetAtt LambdaVPCElasticNetworkExecutionRole.Arn

  # public API
  PublicAPI:
    Type: AWS::Serverless::Api
    Properties:
      StageName: prod
      Auth:
        InvokeRole: CALLER_CREDENTIALS
        AddDefaultAuthorizerToCorsPreflight: false
        ApiKeyRequired: false
        DefaultAuthorizer: Docflow-UserAccess
        Authorizers:
          Docflow-UserAccess:
            UserPoolArn: !GetAtt UserPool.Arn
          Docflow-AdminAccess:
            UserPoolArn: !GetAtt AdminPool.Arn

  CreateTicketFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/CreateTicket
      Description: Creates a new ticket
      Events:
        CreateDocument:
          Type: Api
          Properties:
            RestApiId: !Ref PublicAPI
            Path: /tickets
            Method: post
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action:
                - "s3:ListBucket"
              Resource: !GetAtt DocumentBucket.Arn
            - Effect: Allow
              Action:
                - "s3:GetObject"
                - "s3:PutObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
          BUCKET_NAME: !Ref DocumentBucket
      Role: !GetAtt LambdaVPCElasticNetworkExecutionRole.Arn

  UpdateTicketFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/UpdateTicket
      Description: Updates ticket (confirm or reject)
      Events:
        GetDocument:
          Type: Api
          Properties:
            RestApiId: !Ref AdminAPI
            Path: /tickets/{ticketId}
            Method: patch
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action:
                - "s3:ListBucket"
              Resource: !GetAtt DocumentBucket.Arn
            - Effect: Allow
              Action:
                - "s3:GetObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
            - Effect: Allow
              Action:
                - "s3:GetObject"
                - "s3:PutObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
          BUCKET_NAME: !Ref DocumentBucket
      Role: !GetAtt LambdaVPCElasticNetworkExecutionRole.Arn

  GetTicketsFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambdas/GetTickets
      Description: Returns all the tickets of the user
      Events:
        GetDocument:
          Type: Api
          Properties:
            RestApiId: !Ref PublicAPI
            Path: /tickets
            Method: get
      Policies:
        - Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action:
                - "s3:ListBucket"
              Resource: !GetAtt DocumentBucket.Arn
            - Effect: Allow
              Action:
                - "s3:GetObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
            - Effect: Allow
              Action:
                - "s3:GetObject"
                - "s3:PutObject"
              Resource: !Sub "${DocumentBucket.Arn}/*"
      Layers:
        - !Ref SharedLayer
      Environment:
        Variables:
          RDS_HOST: !GetAtt RDSCluster.Endpoint.Address
          RDS_PORT: !GetAtt RDSCluster.Endpoint.Port
          RDS_Database: !Ref DBName
          RDS_SECRET_ARN: !Ref Secret
          BUCKET_NAME: !Ref DocumentBucket
      Role: !GetAtt LambdaVPCElasticNetworkExecutionRole.Arn

Outputs:
  PublicAPIEndpoint:
    Description: "API Gateway endpoint for the API public functions"
    Value: !Sub "https://${PublicAPI}.execute-api.${AWS::Region}.amazonaws.com/prod/"
  UserPoolId:
    Description: "User Pool ID"
    Value: !Ref UserPool
  UserClientId:
    Description: "User Pool Client ID"
    Value: !Ref UserPoolClient
  AdminAPIEndpoint:
    Description: "API Gateway endpoint for the API admin functions"
    Value: !Sub "https://${AdminAPI}.execute-api.${AWS::Region}.amazonaws.com/prod/"
  AdminPoolId:
    Description: "Admin Pool ID"
    Value: !Ref AdminPool
  AdminClientId:
    Description: "Admin Pool Client ID"
    Value: !Ref AdminPoolClient
